--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,335 +1,320 @@
 :root {
-  /* font sizes */
-  --h1: 4rem; /* 64px */
-  --h2: 2.5rem; /* 40px */
-  --h3: 2rem; /* 32px */
-  --h4: 1.5rem;  /* 24px */
-  --body1: 1.5rem; /* 24px */
-  --body2: 1.25rem; /* 16px */
-  --body3: 1rem; /* 16px */
-  --body4: 0.75rem;
+    /* font sizes */
+    --h1: 4rem; /* 64px */
+    --h2: 2.5rem; /* 40px */
+    --h3: 2rem; /* 32px */
+    --h4: 1.5rem; /* 24px */
+    --body1: 1.5rem; /* 24px */
+    --body2: 1.25rem; /* 16px */
+    --body3: 1rem; /* 16px */
+    --body4: 0.75rem;
 
-
-  /* others */
-  --container-padding-x: 1rem;
+    /* others */
+    --container-padding-x: 1rem;
 }
 
-:root { font-family: 'Inter', sans-serif; }
+:root {
+    font-family: 'Inter', sans-serif;
+}
 @supports (font-variation-settings: normal) {
-  :root { font-family: 'Inter var', sans-serif; }
+    :root {
+        font-family: 'Inter var', sans-serif;
+    }
 }
-
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  background-color: var(--tertiary-color);
-  height: 100%;
+    background-color: var(--tertiary-color);
+    height: 100%;
 }
 
 body {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 nav {
-  height: 100%;
-  width: 300px;
+    height: 100%;
+    width: 300px;
 }
 
 #root {
-  height: 100%;
-  background-color: #E5F3FF;
+    height: 100%;
+    background-color: #e5f3ff;
 }
-  
 
 /************** colors */
 /* bg colors */
-.bg-primary{
+.bg-primary {
     background-color: #0077b6;
 }
-.bg-secondary{
-    background-color: #FCB97D;
+.bg-secondary {
+    background-color: #fcb97d;
 }
-.bg-tertiary{
-    background-color: #E5F3FF;
-}
-
-.bg-white{
-    background-color: #FFFFFF;
+.bg-tertiary {
+    background-color: #e5f3ff;
 }
 
-.bg-black{
+.bg-white {
+    background-color: #ffffff;
+}
+
+.bg-black {
     background-color: #262641;
 }
-.bg-gray1{
-  background-color: #ABABB5
+.bg-gray1 {
+    background-color: #ababb5;
 }
 
-.bg-gray2{
-  background-color: #F6F6F6;
+.bg-gray2 {
+    background-color: #f6f6f6;
 }
-.bg-success{
-    background-color: #46D5B2;
+.bg-success {
+    background-color: #46d5b2;
 }
 
 /* text colors */
 .text-primary {
     color: #0077b6;
 }
-.text-secondary{
-    color: #FCB97D;
+.text-secondary {
+    color: #fcb97d;
 }
-.text-tertiary{
-    color: #E5F3FF;
-}
-
-.text-white{
-    color: #FFFFFF;
+.text-tertiary {
+    color: #e5f3ff;
 }
 
-.text-black{
+.text-white {
+    color: #ffffff;
+}
+
+.text-black {
     color: #262641;
 }
-.text-gray1{
-  color: #ABABB5
+.text-gray1 {
+    color: #ababb5;
 }
 
-.text-gray2{
-  color: #F6F6F6;
+.text-gray2 {
+    color: #f6f6f6;
 }
-
-
 
 /************** fonts sizes to classes */
-.h1{
+.h1 {
     font-size: var(--h1);
 }
 
-.h2{
+.h2 {
     font-size: var(--h2);
 }
 
-.h3{
+.h3 {
     font-size: var(--h3);
 }
 
-.body1{
+.body1 {
     font-size: var(--body1);
 }
 
-.body2{
+.body2 {
     font-size: var(--body2);
 }
 
-.body3{
+.body3 {
     font-size: var(--body3);
 }
 
-.body4{
+.body4 {
     font-size: var(--body4);
 }
 
 /************** text decorations */
-.underline{
-  text-decoration: underline;
+.underline {
+    text-decoration: underline;
 }
 
-
 /************** font weights */
-.font-bold{
+.font-bold {
     font-weight: bold;
 }
 
-
-
 /************** layout */
-.flex{
-  display: flex;
+.flex {
+    display: flex;
 }
-.flex-column{
-  flex-direction: column;
+.flex-column {
+    flex-direction: column;
 }
-.flex-wrap{
-  flex-wrap: wrap;
+.flex-wrap {
+    flex-wrap: wrap;
 }
-.flex-center{
-  justify-content: center;
-  align-items: center;
+.flex-center {
+    justify-content: center;
+    align-items: center;
 }
-.justify-between{
-  justify-content: space-between;
+.justify-between {
+    justify-content: space-between;
 }
-.justify-around{
-  justify-content: space-around;
+.justify-around {
+    justify-content: space-around;
 }
 
-.justify-center{
-  justify-content:center;
+.justify-center {
+    justify-content: center;
 }
-.justify-end{
-  justify-content: end;
+.justify-end {
+    justify-content: end;
 }
-.items-center{
-  align-items: center;
+.items-center {
+    align-items: center;
 }
-.items-end{
-  align-items: end;
+.items-end {
+    align-items: end;
 }
 @media (width > 640px) {
-  .sm-flex-row {
-    flex-direction: row;
-  }
-  .sm-flex-col {
-    flex-direction: column;
-  }
+    .sm-flex-row {
+        flex-direction: row;
+    }
+    .sm-flex-col {
+        flex-direction: column;
+    }
 }
 @media (width > 768px) {
-  .md-flex-row {
-    flex-direction: row;
-  }
-  .md-flex-col {
-    flex-direction: column;
-  }
+    .md-flex-row {
+        flex-direction: row;
+    }
+    .md-flex-col {
+        flex-direction: column;
+    }
 }
 @media (min-width: 1024px) {
-  .lg-flex-row {
-    flex-direction: row;
-  }
-  .lg-flex-col {
-    flex-direction: column;
-  }
+    .lg-flex-row {
+        flex-direction: row;
+    }
+    .lg-flex-col {
+        flex-direction: column;
+    }
 }
 @media (min-width: 1280px) {
-  .xl-flex-row {
-    flex-direction: row;
-  }
-  .xl-flex-col {
-    flex-direction: column;
-  }
+    .xl-flex-row {
+        flex-direction: row;
+    }
+    .xl-flex-col {
+        flex-direction: column;
+    }
 }
-
-
 
 /************** spacing */
-.w-full{
-  width: 100%;
+.w-full {
+    width: 100%;
 }
-.h-full{
-  height: 100%;
+.h-full {
+    height: 100%;
 }
-.h-fit{
-  height: fit-content;
+.h-fit {
+    height: fit-content;
 }
-.gap-2{
-  gap: 0.5rem;
+.gap-2 {
+    gap: 0.5rem;
 }
-.gap-3{
-  gap: 0.75rem;
+.gap-3 {
+    gap: 0.75rem;
 }
-.gap-4{
-  gap: 1rem;
+.gap-4 {
+    gap: 1rem;
 }
-.gap-8{
-  gap: 2rem;
+.gap-8 {
+    gap: 2rem;
 }
-.gap-16{
-  gap: 4rem;
+.gap-16 {
+    gap: 4rem;
 }
-
-
 
 /************** padding and margin */
-.mt-2{
-  margin-top: 0.5rem;
+.mt-2 {
+    margin-top: 0.5rem;
 }
-.mt-4{
-  margin-top: 1rem;
+.mt-4 {
+    margin-top: 1rem;
 }
-.mb-4{
-  margin-bottom: 1rem;
+.mb-4 {
+    margin-bottom: 1rem;
 }
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
-.mt-8{
-  margin-top: 2rem;
+.mt-8 {
+    margin-top: 2rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
+.px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
-
 
 /************** img */
-.img-auto{
-  background-size: auto;
+.img-auto {
+    background-size: auto;
 }
-
-
 
 /************** borders */
-.rounded-lg{
-  border-radius: 8px;
+.rounded-lg {
+    border-radius: 8px;
 }
 
-
-
 /************** others */
-.list-none{
+.list-none {
     list-style-type: none;
 }
 
-.font-bold{
+.font-bold {
     font-weight: bold;
 }
-.text-center{
-  text-align: center;
+.text-center {
+    text-align: center;
 }
-.cursor-pointer{
-  cursor: pointer;
+.cursor-pointer {
+    cursor: pointer;
 }
-
 
 .container {
-  width: 100%;
-  padding-right: var(--container-padding-x);
-  padding-left: var(--container-padding-x);
-  margin-right: auto;
-  margin-left: auto;
-  /* padding-top: 2rem; */
+    width: 100%;
+    padding-right: var(--container-padding-x);
+    padding-left: var(--container-padding-x);
+    margin-right: auto;
+    margin-left: auto;
+    /* padding-top: 2rem; */
 }
 
-
 .toast-success {
-  background-color: #d1fae5;
-  border-left: 4px solid #22c55e;
-  color: #047857;
+    background-color: #d1fae5;
+    border-left: 4px solid #22c55e;
+    color: #047857;
 }
 
 .toast-error {
-  background-color: #fee2e2;
-  border-left: 4px solid #ef4444;
-  color: #b91c1c;
+    background-color: #fee2e2;
+    border-left: 4px solid #ef4444;
+    color: #b91c1c;
 }
