--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,38 @@ main {
     min-height: 88vh;
 }
 
+.sidebar {
+    /* width: 220px; */
+    background-color: #121212;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-right: 1px solid #333;
+}
+
+.sidebar button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 8px;
+    border-radius: 5px;
+    transition: background 0.2s ease;
+}
+
+.sidebar button:hover {
+    background-color: #dba2a2;
+}
+
+.logout {
+    margin-top: auto;
+}
+
 .sidbar ul {
     list-style: none;
     background-color: white;
@@ -43,6 +75,31 @@ main {
 }
 
 /************** others */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    /* width: 119px; */
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 10px;
+    position: absolute;
+    z-index: 1;
+    left: 30px;
+    top: -10px;
+    width: max-content;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
 .btn {
     border-radius: 8px;
     cursor: pointer;
