--- a/client/src/styles/pages/imageEditor.css
+++ b/client/src/styles/pages/imageEditor.css
@@ -1,65 +1,46 @@
 /* styles/editor.css */
 
 .editor-container {
-  display: flex;
-  height: 100vh;
-  background-color: #1e1e1e;
-  color: white;
-}
-
-.sidebar {
-  width: 220px;
-  background-color: #121212;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  border-right: 1px solid #333;
-}
-
-.sidebar button {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  background: none;
-  border: none;
-  color: white;
-  cursor: pointer;
-  font-size: 14px;
-  padding: 8px;
-  border-radius: 5px;
-  transition: background 0.2s ease;
-}
-
-.sidebar button:hover {
-  background-color: #dba2a2;
-}
-
-.logout {
-  margin-top: auto;
+    display: flex;
+    height: 100vh;
+    background-color: #1e1e1e;
+    color: white;
 }
 
 .image-preview {
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #252525;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #252525;
 }
 
 .image-preview img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 10px;
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 10px;
 }
 
 .no-image {
-  text-align: center;
-  color: #bbb;
-  margin-top: 20%;
+    text-align: center;
+    color: #bbb;
+    margin-top: 20%;
 }
 
-.div-canvas{
-  display: flex;
-  height: 80vh;
+.div-canvas {
+    display: flex;
+    height: 80vh;
+}
+
+.canvas-wrapper {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.canvas {
+    display: block;
+    width: 100% !important;
+    height: 100% !important;
 }
